# api.gtdb.ecogenomic.org

./: .env.example  .gitignore  .releaserc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: main-push.yml
api/: config.py  exceptions.py
api/controller/: advanced.py  ani.py  fastani.py  genome.py  genomes.py  meta.py  sankey.py  search.py  skani.py  species.py  status.py  taxa.py  taxon.py  taxonomy.py  util.py
api/db/: __init__.py  common.py  gtdb.py  gtdb_web.py  models.py
api/model/: advanced.py  ani.py  fastani.py  genome.py  genomes.py  graph.py  meta.py  sankey.py  search.py  skani.py  species.py  status.py  taxa.py  taxon.py  taxonomy.py  util.py
api/util/: accession.py  cache.py  collection.py  common.py  datetime.py  email.py  io.py  matrix.py  ncbi.py  url.py
api/view/: advanced.py  ani.py  fastani.py  genome.py  genomes.py  meta.py  sankey.py  search.py  sitemap.py  skani.py  species.py  status.py  taxa.py  taxon.py  taxonomy.py  util.py
docker/: Dockerfile  config.json
docker/api/: Dockerfile  config.json
docker/fastani/: Dockerfile  entrypoint.sh
docker/ncbi-db/: Dockerfile
scripts/: dl_ncbi_to_disk.py  generate_species_heatmap_img.py  generate_species_heatmaps.py  locustfile.py  scrape_bergeys_doi.py  scrape_lpsn.py  scrape_lpsn_new.py  scrape_seqcode.py  update_fastani_db.py  update_gtdb_tree_release.py  update_taxon_history.py
scripts/release/: import_synonyms.py  update_genome_taxid.py  update_tree.py  update_tree_fix_children.py  update_tree_fix_ordering.py
scripts/tree/: ncbi_links.py  ncbi_links_in_page.py  ncbi_links_new.py
test/test_util/: test_collection.py  test_ncbi.py
