[tool.poetry]
name = "api.gtdb.ecogenomic.org"
version = "0.1.0"
description = "API to the Genome Taxonomy Database (GTDB)"
authors = ["Aaron Mussig <aaronmussig@gmail.com>"]
license = "GPL-3"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
rq = "^1.13.0"
redis = "^4.5.3"
hiredis = "^2.2.2"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
SQLAlchemy = "^1.4.29"
psycopg2-binary = "^2.9.5"
vtracker = "^1.0.1"
requests = "^2.28.2"
python-multipart = "^0.0.6"
DendroPy = "^4.5.2"
aiosmtplib = "^1.1.6"
fastani = "^1.0.1"
scipy = "^1.10.1"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
