[tool.poetry]
name = "gtdb-api.ecogenomic.org"
version = "0.1.0"
description = "API to the Genome Taxonomy Database (GTDB)"
authors = ["Aaron Mussig <aaronmussig@gmail.com>"]
license = "GPL-3"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
rq = "^2.6.0"
redis = "^6.4.0"
hiredis = "^3.2.1"
fastapi = {extras = ["standard"], version = "^0.119.0"}
pydantic = "^2.12.3"
uvicorn = "0.38.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.11"
vtracker = "^1.0.1"
requests = "^2.28.2"
python-multipart = "^0.0.20"
DendroPy = "^4.5.2"
aiosmtplib = "^4.0.2"
fastani = "^1.0.1"
scipy = "^1.10.1"
numpy = "^2.3.4"
matplotlib = "^3.10.0"
httpx = "^0.28.1"
sqlmodel = "^0.0.27"
sqlalchemy = "^2.0.44"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
